--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Scraping",
-  "version": "0.2",
+  "version": "0.3",
   "description": "",
-  "main": "scraping2.js",
+  "main": "scraping.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
